--- a/MyBlog/package.json
+++ b/MyBlog/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "animate.css": "^4.1.1",
+    "axios": "^1.6.7",
+    "firebase": "^10.9.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
